cabal-version:       2.4
name:                cabafu
version:             0.1.0.0
synopsis:            cli tool for modifying cabal files
homepage:            https://github.com/gilligan/cabafu
license:             MIT
license-file:        LICENSE
author:              tobias pflug
maintainer:          tobias.pflug@gmail.com
category:            Development
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Cabafu
  build-depends:       base ^>=4.12.0.0
                     , Cabal
                     , cabal-lenses
                     , lens
  hs-source-dirs:      src
  default-language:    Haskell2010

executable cabafu
  main-is:             Main.hs
  build-depends:       base ^>=4.12.0.0
                     , cabafu
  hs-source-dirs:      app
  default-language:    Haskell2010
